# ram-loader

./: README.md
app/: Cargo.toml  memory.x
app/.cargo/: config.toml
app/examples/: blinky-interrupt.rs  led.rs  static-variable.rs
app/precompiled_elfs/: blinky-interrupt  led  led-bad-address  static-variable
app/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
elfloader/: Cargo.toml
host-tool/: Cargo.toml
host-tool/src/: main.rs
ramloader/: Cargo.toml  memory.x
ramloader/.cargo/: config.toml
ramloader/example_elfs/: blinky
ramloader/src/: main.rs
