[package]
name = "host-tool"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
serialport = "4.0.1"
serde = "1.0.126"
serde_derive = "1.0.126"

[dependencies.postcard]
version = "0.7.0"
features = ["use-std"]